src/tests/ci/assignment_4_control_flow/valid/03_for_loop_with_break.c
int main() {
    int i;
    for (i = 0; i < 5; i++) {
        if (i == 3) {
            break;
        }
    }
    return i;
}