src/tests/ci/assignment_4_control_flow/invalid_semantic/05_switch_case_declaration_without_scope.c
int main() {
    int x = 1;

    switch (x) {
        case 1:
            int y = 5;
            break;
        default:
            break;
    }

    return 0;
}